# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2018-08-19 mmichaud <m.michael.michaud@orange.fr>
  * Add two plugins :
    - GenerateUniqueRandomIdPlugIn (menu tools/edit attributes)
    - SelectAllOrderedFeaturesFromAttributeTablePlugIn (AttributeTable context menu)

2018-07-01 mmichaud <m.michael.michaud@orange.fr>
  * Update GraphToolbox and MatchingPlugIn extensions

2018-06-30 mmichaud <m.michael.michaud@orange.fr>
  * Fix #478 : AdHoc SQL query can be interrupted properly

2018-06-26 Giuseppe Aruta.
  * DEMStatisticsPlugIn. Substitute output HTMLDoc with JTable.
    Allow selection of multiple layers on plugin dialog.
    Extend to multi band raster files

2018-06-25 mmichaud <m.michael.michaud@orange.fr>
  * Modify slightly the way the windows .bat search for java

2018-06-11 Giuseppe Aruta. Raster profile plugin:
  * Plugin recognizes Layer unit.
  * Absolute or relative slope output
  * Added capability to compute travel time on route depending to input flat,
    uphill and downhill speeds
  
2018-06-20
  * Fix FlexibleFeature#getAttributes() (was not implemented)

2018-06-11 Giuseppe Aruta. Raster profile plugin:
  * Simplified additional result output.
  * Added capability to draw a slope profile

2018-06-08 mmichaud <m.michael.michaud@orange.fr>
  * bugfix in SkeletonPlugIn (PLUS version, GraphToolBox)

2018-06-03 Giuseppe Aruta. Added histogram plugin for raster which calculates
  * also statistic indices, relative and cumulative frequancies

2018-06-03 mmichaud <m.michael.michaud@orange.fr>
  * bugfix in Dissolve2 : could not use geometry attribute as key
  * 3 bugfix in layerListener management (hopefully fix #419)
    - layerListener is removed when the concerned layer is removed
    - sridStyle set geometry srid only once, not once per Layer