@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+<root>
+  <attribute xml-name="layerName" java-name="layerName"/>
+  <attribute xml-name="name" java-name="name"/>
+  <attribute xml-name="visible" java-name="visible"/>
+  <attribute xml-name="editable" java-name="editable"/>
+  <attribute xml-name="selectable" java-name="selectable"/>
+  <attribute xml-name="read-only" java-name="readonly"/>
+  <element xml-name="scaleDependentRendering">
+    <attribute xml-name="enabled" java-name="scaleDependentRenderingEnabled"/>
+    <element xml-name="minScale" java-name="minScale"/>
+    <element xml-name="maxScale" java-name="maxScale"/>
+  </element>
+  <element xml-name="description" java-name="description"/>
+  <!--element xml-name="data-source-query" java-name="dataSourceQuery"/-->
+  <attribute xml-name="drawnLast" java-name="drawingLast"/>
+  <attribute xml-name="synchronizedLineColor" java-name="synchronizingLineColor"/>
+  <element xml-name="styles">
+    <element xml-name="style" java-name="style"/>
+  </element>
+  <!--element xml-name="feature-schema-operation" java-name="featureSchemaOperation"/-->
+</root>
